--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-slate
 title: Inabikari Library
+background-image: url("https://static.wikia.nocookie.net/inazuma-eleven/images/4/4c/Inabikari_Training_Center.png/revision/latest?cb=20180609221636") 
