--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,18 @@
-theme: jekyll-theme-slate
+theme: alembic-jekyll-theme
 title: Inabikari Library
+
+navigation_header: 
+- title: Home
+  url: /inalib/
+- title: Players (Wiki)
+  url: /inalib/inapedia/players/players.html
+- title: Tournaments (Wiki)
+  url: /inalib/inapedia/tournaments/tournamentsmain.html
+- title: Fundamentals (Guides)
+  url: /inalib/guides/fundamentals.html
+- title: Advanced (Guides)
+  url: /inalib/guides/advanced.html
+
+navigation_footer:
+- title: Created by Baamsushi
+
