--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,15 @@
 title: Inabikari Library
 theme: jekyll-theme-slate
 
+navigation:
+
+- title: Home
+  url: /inalib/
+- title: Players (Wiki)
+  url: /inalib/inapedia/players/players.html
+- title: Tournaments (Wiki)
+  url: /inalib/inapedia/tournaments/tournamentsmain.html
+- title: Fundamentals (Guides)
+  url: /inalib/guides/fundamentals.html
+- title: Advanced (Guides)
+  url: /inalib/guides/advanced.html
