--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,15 @@
 title: Inabikari Library
 theme: jekyll-theme-slate
+
+header_pages:
+
+- title: Home
+  url: /inalib/
+- title: Players (Wiki)
+  url: /inalib/inapedia/players/playersmain.html
+- title: Tournaments (Wiki)
+  url: /inalib/inapedia/tournaments/tournamentsmain.html
+- title: Fundamentals (Guides)
+  url: /inalib/guides/fundamentals.html
+- title: Advanced (Guides)
+  url: /inalib/guides/advanced.html
