--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 main:
-  - title: "Quick-Start Guide"
-    url: /docs/quick-start-guide/
+  - title: "Players (Competitive)"
+    url: /inapedia/players.md/
   - title: "Posts"
     url: /year-archive/
   - title: "Categories"
