--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ plugins:
 - jekyll-include-cache
 
 minimal_mistakes_skin: "sunrise"
+# "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
