--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,15 @@ remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 
 plugins:
 - jekyll-include-cache
+- jekyll-titles-from-headings
 
 minimal_mistakes_skin: "sunrise"
 # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
+titles_from_headings:
+  enabled:     true
+  strip_title: false
+  collections: false
 
 defaults:
   # _pages
