--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ minimal_mistakes_skin: "sunrise"
 
 titles_from_headings:
   enabled:     true
-  strip_title: false
+  strip_title: true
   collections: false
 
 defaults:
