--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
 - jekyll-include-cache
 - jekyll-titles-from-headings
+- jemoji
 
 minimal_mistakes_skin: "sunrise"
 # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
